k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lingooru-app
  labels:
    app: lingooru-app
spec:
  selector:
    app: lingooru-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
